themes/Adwaita/gtk-3.0/gtk.css
/* ... */
.scrollbar.trough {
    background-image: none;
    background-color: shade (@theme_bg_color, 0.882);
    border-width: 0;
    border-radius: 0;
}

.scrollbar.slider,
.scrollbar.button {
    background-image: none;
    background-color: @theme_base_color;
    border-color: @button_border;
    border-radius: 3;
    border-width: 1;
}

.scrollbar.slider:prelight {
    background-image: none;
    background-color: @theme_base_color;
    border-color: shade (@highlighted_border, 0.964);
}

.scrollbar.slider:prelight:active {
    background-image: none;
    background-color: @theme_base_color;
    border-color: @theme_selected_bg_color;
}

.scrollbar.button {
    color: @internal_element_color;
}

.scrollbar.button:prelight {
    background-image: none;
    background-color: @theme_base_color;
    border-color: shade (@highlighted_border, 0.964)
}

.scrollbar.button:prelight:active {
    background-image: none;
    background-color: @theme_base_color;
    border-color: shade (@highlighted_border, 0.964)
}

.scrollbar.button:insensitive {
    color: lighter (@internal_element_color);
    background-color: @theme_base_color;
}

/***********
 * Buttons *
 ***********/
.button {
    padding: 3;

    -adwaita-focus-fill-color: alpha (@theme_base_color, 0.35);
    -adwaita-focus-border-gradient-a: alpha (@keyboard_focus_border_a, 0.62);
    -adwaita-focus-border-gradient-b: alpha (@keyboard_focus_border_b, 0.62);
    -GtkWidget-focus-line-width: 2;

    border-radius: 2;
    border-width: 1;
    border-color: @button_border;
    border-style: solid;

    background-image: -gtk-gradient (linear,
				     left top, left bottom,
                                     from (@button_gradient_color_a),
                                     to (@button_gradient_color_b));
}

.button:hover,
.toolbar .button:hover {
    border-color: @button_border;
    background-image: -gtk-gradient (linear,
				     left top, left bottom,
				     from (@theme_base_color),
				     to (shade (@button_gradient_color_a, 0.94)));
}

.button:active,
.toolbar .button:active,
.button:hover:active,
.toolbar .button:hover:active {
    background-image: -gtk-gradient (linear,
    				     left top, left bottom,
                                     from (@button_active_gradient_color),
				     to (alpha (shade (@button_active_gradient_color, 0.83), 0.13)));
    border-color: @highlighted_border;
}

.button:insensitive {
    background-image: none;
    background-color: @insensitive_bg_color;
    color: @insensitive_fg_color;
}

.button.default {
    border-width: 2;
    border-color: shade (@button_border, 1.10);
}

/*********
 * Menus *
 *********/

/* this controls the general appearance of the menubar */
.menubar {
    background-image: -gtk-gradient (linear,
				     left top, left bottom,
				     from (@theme_bg_color),
				     color-stop (0.45, shade (@theme_bg_color, 0.97)),
				     to (shade (@theme_bg_color, 0,99));
    border-width: 0;
    border-style: none;
    padding: 4;

    -GtkWidget-window-dragging: true;
    -GtkMenuBar-internal-padding: 0;
}

/* remove the image from the prelight areas */
.menubar .menuitem:prelight {
    background-image: none;
    background-color: @theme_base_color;
    color: @theme_text_color;

    border-style: solid;
    border-radius: 3;
    border-width: 1;
    border-color: @inactive_frame_color;
}

.menu {
    padding: 2;

    background-color: @theme_base_color;

    border-style: solid;
    border-width: 1;
    border-radius: 0;
    border-color: @inactive_frame_color;

    -GtkMenuItem-arrow-scaling: 0.4;

}

.menuitem:active,
.menuitem:prelight {
    background-color: @selected_bg_color;
    color: @theme_selected_fg_color;
    border-style: solid;
    border-width: 1;
    border-radius: 1;
    border-color: darker (@selected_bg_color);
}

.menu .separator {
    border-color: @inactive_frame_color;

    -GtkSeparatorMenuItem-horizontal-padding: 0;
}

/* menu radio and check items are drawn differently */
.menu .check:active {
    color: @menu_controls_color;
}

.menu .radio:active {
    color: @menu_controls_color;
}

.menu .check:prelight {
    color: @selected_fg_color;
}

.menu .radio:prelight {
    color: @selected_fg_color;
}

/*************************
 * Check and Radio items *
 *************************/

/* draw regular check and radio items using our SVG assets */
.check,
.check row:selected,
.check row:selected:focused {
    background-image: url ("assets/checkbox-unchecked.svg");
}

.check:insensitive,
.check row:selected:insensitive,
.check row:selected:focused:insensitive {
    background-image: url ("assets/checkbox-unchecked-insensitive.svg");
}

.check:active,
.check row:selected:active,
.check row:selected:focused:active {
    background-image: url ("assets/checkbox-checked.svg");
}

.check:active:insensitive,
.check row:selected:active:insensitive,
.check row:selected:focused:active:insensitive
{
    background-image: url ("assets/checkbox-checked-insensitive.svg");
}

.check:inconsistent,
.check row:selected:inconsistent,
.check row:selected:focused:inconsistent {
    background-image: url ("assets/checkbox-mixed.svg");
}

.radio,
.radio row:selected,
.radio row:selected:focused {
    background-image: url ("assets/radio-unselected.svg");
}

.radio:insensitive,
.radio row:selected:insensitive,
.radio row:selected:focused:insensitive {
    background-image: url ("assets/radio-unselected-insensitive.svg");
}

.radio:active,
.radio row:selected:active,
.radio row:selected:focused:active {
    background-image: url ("assets/radio-selected.svg");
}

.radio:active:insensitive,
.radio row:selected:active:insensitive,
.radio row:selected:focused:active:insensitive {
    background-image: url ("assets/radio-selected-insensitive.svg");
}

.radio:inconsistent,
.radio row:selected:inconsistent,
.radio row:selected:focused:inconsistent {
    background-image: url ("assets/radio-mixed.svg");
}
/* ... */

